new repos will use the dockerbuild and deploy workflow now

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   deploy:
-    uses: TheClusterFlux/central-workflows/.github/workflows/deploy.yaml@main
+    uses: TheClusterFlux/central-workflows/.github/workflows/DockerBuildAndK8Deploy.yaml@main
     secrets: 
       DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
       DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
